# dual_dummy

./: README.md  build_script.sh  command.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm_control/lib/arm_control/: ik_node  trajectory_viewer
install/arm_control/share/arm_control/: package.dsv  package.ps1  package.sh
install/arm_control/share/arm_control/cmake/: arm_controlConfig.cmake  arm_control__rosidl_typesupport_cExport.cmake  arm_control__rosidl_typesupport_cppExport.cmake  export_arm_control__rosidl_typesupport_fastrtps_cppExport.cmake
install/arm_control/share/arm_control/launch/: ik_node.launch.py
install/dummy2_description/share/dummy2_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dummy2_description/share/dummy2_description/config/: robot_view.rviz
install/dummy2_description/share/dummy2_description/launch/: display.launch.py
install/dummy2_description/share/dummy2_description/meshes/: base_link.stl  camera_1.stl  camera_eye_1.stl  figer1_1.stl  figer2_1.stl  link1_1.stl  link3_1.stl  link4_1.stl  (+1 more)
install/rboot_interface/share/rboot_interface/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rboot_launch/share/rboot_launch/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rboot_libs/share/rboot_libs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rboot_topic/lib/rboot_topic/: dummy2_ros_controller
install/rboot_topic/share/rboot_topic/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/arm_control/: CMakeLists.txt  package.xml
src/arm_control/install/: local_setup.sh  setup.sh
src/arm_control/install/arm_control/include/arm_control/arm_control/msg/: ik_result.hpp
src/arm_control/install/arm_control/include/arm_control/arm_control/msg/detail/: ik_result__rosidl_typesupport_introspection_cpp.hpp  ik_result__struct.h  trajectory_point__builder.hpp  trajectory_point__rosidl_typesupport_introspection_c.h
src/arm_control/install/arm_control/share/arm_control/: local_setup.sh  package.sh
src/arm_control/install/arm_control/share/arm_control/cmake/: ament_cmake_export_dependencies-extras.cmake
src/arm_control/install/arm_control/share/arm_control/msg/: IKResult.idl  TrajectoryPoint.idl
src/arm_control/launch/: ik_node.launch.py
src/arm_control/log/: latest_build
src/arm_control/msg/: IKResult.msg
src/arm_control/src/: controller_node.cpp  ik_node.cpp  ik_node.cpp.bak  motionlib.cpp  motionlib.h  trajectory_node.cpp  trajectory_viewer.cpp
src/dummy2_description/: setup.cfg
src/dummy2_description/launch/: display.launch.py
src/dummy2_description/meshes/: link5_1.stl
src/dummy2_description/urdf/: dual_dummy.urdf  dual_dummy.urdf.bak
src/rboot_topic/: setup.py
src/rboot_topic/rboot_topic/: left_ros_controller.py
(+88 files in other folders)
